Bullet point alignment fixes

--- a/css/style.css
+++ b/css/style.css
@@ -232,6 +232,10 @@ header {
   width: 115px;
 }
 
+#platform ul {
+  padding-left:32px;
+}
+
 #platformlink {
   color: #dba72b;
   text-decoration: none;
@@ -250,6 +254,10 @@ header {
 #apps img {
   height: 29px;
   width: 130px;
+}
+
+#apps ul {
+  padding-left:35px;
 }
 
 #apps h3 {
